@startuml

class RegisterAccess
class Register
class RegisterTraits
class BaseType
class RegisterBitProxy
class UnderlyingType
class EnumTypesOnly

RegisterAccess --|> Register
RegisterAccess : +ReadOnly
RegisterAccess : +WriteOnly
RegisterAccess : +ReadWrite

RegisterTraits --|> Register
RegisterTraits : +PrimitiveType

Register --o RegisterBitProxy
Register : +size
Register : +raw_ptr
Register : +Register(std::uintptr_t)
Register : +operator[](std::size_t)
Register : +operator BaseType()
Register : +operator=(BaseType)
Register : +operator++()
Register : +operator++(int)
Register : +operator--()
Register : +operator--(int)
Register : +operator+=(BaseType)
Register : +operator-=(BaseType)
Register : +operator~()
Register : +operator|=(BaseType)
Register : +operator&=(BaseType)
Register : +operator^=(BaseType)
Register : +GetAddress() const
Register : +SetAddress(std::uintptr_t)

Register +-- BaseType
RegisterBitProxy --> Register : Parent
RegisterBitProxy : +BitProxy(bool)
RegisterBitProxy : +operator bool() const
RegisterBitProxy : +operator=(bool)

EnumTypesOnly --|> Register
UnderlyingType --|> Register

@enduml
